# Qiufg

./: Qiufg.jks  build.gradle  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: andfix.cpp  art.h  com_qiufg_hotfix_BugFixManager.h  com_qiufg_template_andfix_BugFixManager.h  common.h  hotfix.cpp
app/src/main/res/drawable/: category_gank_author.xml  category_gank_publish_time.xml  dialog_rounded.xml  dialog_rounded_black.xml  ic_photo_camera_black_24dp.xml  mine_item_bg.xml  mine_item_divider.xml  mine_item_icon_aidl.xml  mine_item_icon_setting.xml  mine_item_icon_theme.xml  mine_item_icon_unknown1.xml  mine_item_icon_unknown2.xml  mine_item_icon_unknown3.xml  note_sub_item_bg.xml  photo_preview_page_index.xml  preview_photo_toolbar_gradient.xml  ripple_white_gray_bg.xml  welcome_bg.xml
app/src/main/res/drawable-v21/: ripple_white_gray_bg.xml
app/src/main/res/layout/: a_alarm.xml  a_anim.xml  a_download.xml  a_hotfix.xml  a_main.xml  a_scanner.xml  a_service.xml  activity_aidl.xml  activity_andfix.xml  activity_main.xml  activity_photo_preview.xml  activity_webview.xml  activity_welcome.xml  app_bar_main.xml  dialog_alert.xml  dialog_loading.xml  dialog_select.xml  f_command.xml  f_gank_android.xml  f_home.xml  f_scan_qrcode.xml  fragment_category.xml  fragment_home.xml  fragment_mine.xml  fragment_note.xml  item_card_girl.xml  item_gank.xml  item_gank_android.xml  item_home_content.xml  item_note.xml  item_photo_preview.xml  layout_item_mine.xml  layout_non_content_hint.xml  (+4 more)
(+382 files in other folders)
